<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.broadcast.BroadcastActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/broadcastStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/broadcast_status"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activityBroadcastBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activityBroadcastStop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/broadcast"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activityBroadcastStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/activityBroadcastBroadcast"
        app:layout_constraintRight_toLeftOf="@id/activityBroadcastRandomMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/stop"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activityBroadcastRandomMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/activityBroadcastStop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/random_message"
        />

</androidx.constraintlayout.widget.ConstraintLayout>